fixed gap between sections

--- a/src/components/ui/organisms/InfosSection/infosSection.css
+++ b/src/components/ui/organisms/InfosSection/infosSection.css
@@ -4,6 +4,3 @@
     width: 100%;
 }
 
-.infos-section h1{
-    margin-top: 0;
-}
